# SaverHunts

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
engine/: _setup_carts.py  cron_push.py  db_migrate.py  main.py  pyproject.toml  requirements.txt  test_httpx.py  test_scrape.py
engine/app/: main.py
engine/app/api/endpoints/: search.py  tasks.py
engine/app/core/: config.py  supabase.py
engine/app/schemas/: product.py
engine/app/tasks/: celery_app.py  scrapers.py
engine/app/utils/: affiliate.py  auth.py  cache.py  rate_limiter.py  security.py
engine/migrations/: 001_wallet_transactions.sql  002_wardrobe_enhanced.sql  003_verified_deals.sql  004_price_alerts.sql  005_analytics.sql  006_shared_deals.sql
engine/routers/: ai.py  alerts.py  analytics.py  comments.py  feed.py  grocery.py  leaderboard.py  notifications.py  products.py  receipts.py  reels.py  social.py  wardrobe.py
engine/services/: deal_scorer.py  personalization.py  wallet.py
engine/tasks/: celery_app.py  grocery_platform_scrapers.py  grocery_scrapers.py  platform_scrapers.py  scheduler.py  scrapers.py
engine/tests/: conftest.py  helpers.py  test_api.py  test_endpoints.py  test_group_buys.py  test_wallet.py
mobile/: app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tamagui.config.ts
mobile/__tests__/: HomeScreen.test.tsx
mobile/app/: _layout.tsx  auth.tsx  community.tsx  feed.tsx  gift-concierge.tsx  grocery.tsx  onboarding.tsx  premium.tsx  receipt-scanner.tsx  settings.tsx  wardrobe.tsx
mobile/components/: ARTryOnModal.tsx  (+22 more)
(+23 files in other folders)
