[project]
name = "saverhunt-engine"
version = "0.1.0"
description = "SaverHunt FastAPI Backend Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "curl-cffi>=0.6.2",
    "supabase>=2.3.4",
    "pydantic>=2.6.2",
    "pydantic-settings>=2.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
